--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines":{
+    "node": "v10.16.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
